--- a/PythonBasicNumericTypes.ipynb
+++ b/PythonBasicNumericTypes.ipynb
@@ -75,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775807 9223372036854775807\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(sys.maxsize, 2**63 - 1)"
@@ -92,9 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9223372036854775808\n"
+     ]
+    }
+   ],
    "source": [
     "print(sys.maxsize+1)"
    ]
@@ -126,9 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum float 1.7976931348623157e+308\n",
+      "minimum float 2.2250738585072014e-308\n",
+      "epislon 2.220446049250313e-16\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "print(\"maximum float\",sys.float_info.max)\n",
@@ -154,9 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.0\n",
+      "40.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(4e1)\n",
     "print(4E1)\n"
@@ -175,9 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
    "source": [
     "print(9/3)\n",
     "print(float(5))\n",
@@ -235,9 +280,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 <class 'int'>\n",
+      "2 <class 'int'>\n",
+      "15 <class 'int'>\n",
+      "1.6666666666666667 <class 'float'>\n",
+      "2 <class 'int'>\n",
+      "931322574615478515625 <class 'int'>\n",
+      "0.2999999999999998 <class 'float'>\n",
+      "13.5\n",
+      "False\n",
+      "True\n",
+      "5>4 True\n"
+     ]
+    }
+   ],
    "source": [
     "print (5+3,type(5+3))\n",
     "print (5-3,type(5-3))\n",
@@ -328,9 +391,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 <class 'int'>\n"
+     ]
+    }
+   ],
    "source": [
     "print(round(5.7),type(round(5.7)))\n"
    ]
@@ -363,18 +434,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numeric_quizz1(replace_me_with_the_numeric_answer)"
+    "from quizzes.numeric_quizzes import*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1360.6923076923076\n"
+     ]
+    }
+   ],
+   "source": [
+    "y=(((5*3**3)-2)**2)/(4*3+1)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You got the correct answer!'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_quizz1(1360.6923076923076)"
    ]
   },
   {
@@ -397,11 +499,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    }
+   ],
    "source": [
-    "numeric_quizz2(\"replace_me_with_True_or_False\")"
+    "if (7.5*(4/3))<((3**2*(3/4))/(1+2**2)):\n",
+    "    print(\"true\")\n",
+    "else:\n",
+    "    print(\"false\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You got the correct answer'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeric_quizz2(False)"
    ]
   },
   {
@@ -503,9 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([127], dtype=int8)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.array([-129,], dtype=np.int8)"
@@ -522,9 +666,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-22  -4  36]\n",
+      " [ 31 -19   3]\n",
+      " [-41   8  45]]\n",
+      "******************************************\n",
+      "[[-50 -50  13]\n",
+      " [  5  35  38]\n",
+      " [-21  28 -15]]\n",
+      "******************************************\n",
+      "[[ 30   2]\n",
+      " [-36 -49]]\n"
+     ]
+    }
+   ],
    "source": [
     "A= np.random.randint(-50, 50, size=(3,3), dtype=np.int8)\n",
     "B= np.random.randint(-50, 50, size=(3,3), dtype=np.int16)\n",
@@ -538,45 +699,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-72 -54  49]\n",
+      " [ 36  16  41]\n",
+      " [-62  36  30]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A + B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1100  200  468]\n",
+      " [ 155 -665  114]\n",
+      " [ 861  224 -675]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(A*B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[22,  4, 36],\n",
+       "       [31, 19,  3],\n",
+       "       [41,  8, 45]], dtype=int8)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.abs(A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (3,3) (2,2) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-263e8a7b7a7e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (3,3) (2,2) "
+     ]
+    }
+   ],
    "source": [
     "print(A*C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.5/site-packages/ipykernel_launcher.py:1: RuntimeWarning: overflow encountered in exp\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.000e+00, 1.831e-02,       inf],\n",
+       "       [      inf, 0.000e+00, 2.008e+01],\n",
+       "       [0.000e+00, 2.980e+03,       inf]], dtype=float16)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.exp(A)"
    ]
@@ -605,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
