in class changes to text based notebooks

--- a/working_with_textual_medical_data.ipynb
+++ b/working_with_textual_medical_data.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter MySQL passwd for jovyan········\n"
+     ]
+    }
+   ],
    "source": [
     "conn = pymysql.connect(host=\"mysql\",\n",
     "                       port=3306,user=\"jovyan\",\n",
@@ -79,12 +87,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DISCHARGE_SUMMARY', 'MD Notes', 'Nursing/Other', 'RADIOLOGY_REPORT'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rad_data = \\\n",
-    "pd.read_sql(\"\"\"SELECT noteevents.subject_id, \n",
+    "rad_data = pd.read_sql(\"\"\"SELECT * FROM noteevents LIMIT 10000\"\"\", conn)\n",
+    "rad_data.head()\n",
+    "set(rad_data[\"category\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th>text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:43 AM\\n   ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 6:37 AM\\n    ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-19**] 12:09 PM\\n   ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subject_id  hadm_id                                               text\n",
+       "0          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...\n",
+       "1          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...\n",
+       "2          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:43 AM\\n   ...\n",
+       "3          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 6:37 AM\\n    ...\n",
+       "4          56  28766.0  \\n\\n\\n     DATE: [**2644-1-19**] 12:09 PM\\n   ..."
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rad_data = pd.read_sql(\"\"\"SELECT noteevents.subject_id, \n",
     "                      noteevents.hadm_id,\n",
     "                      noteevents.text \n",
     "               FROM noteevents\n",
@@ -94,9 +198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 14)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rad_data.shape"
    ]
@@ -137,15 +252,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "     DATE: [**2644-1-17**] 10:53 AM\n",
+      "     MR HEAD W & W/O CONTRAST; MR CONTRAST GADOLIN                   Clip # [**Clip Number (Radiology) 12569**]\n",
+      "     Reason: R ICB and HX brain mets - eval - also with DWI for CVA Do MR\n",
+      "      Contrast: MAGNEVIST Amt: 15\n",
+      "     ______________________________________________________________________________\n",
+      "     UNDERLYING MEDICAL CONDITION:\n",
+      "      [**Age over 90 **] year old woman with lung CA- mets to brain                                   \n",
+      "     REASON FOR THIS EXAMINATION:\n",
+      "      R ICB and HX brain mets - eval - also with DWI for CVA Do MRI both with and \n",
+      "      without contast please\n",
+      "     ______________________________________________________________________________\n",
+      "                                     FINAL REPORT\n",
+      "     EXAMINATION:  MRI of the brain with and without gadolinium.\n",
+      "     \n",
+      "     INDICATION:  [**Age over 90 **] year old woman with lung cancer and right intracranial bleed\n",
+      "     and history of brain metastases.  Please evaluate for acute infarct.\n",
+      "     \n",
+      "     TECHNIQUE:  Multiplanar T1 and T2-weighted images of the brain with gadolinium\n",
+      "     according to standard departmental protocol.  No prior study for comparison.\n",
+      "     \n",
+      "     FINDINGS:  On diffusion-weighted images there is a small area of restricted\n",
+      "     diffusion along the falx within the left occipitotemporal lobe.  It is also\n",
+      "     bright on FLAIR-weighted images and may represent a subacute infarct. Clinical\n",
+      "     correlation is recommended.  On gradient echo images there is a large area of\n",
+      "     intraparenchymal hemorrhage within the right parietal lobe and left thalamus\n",
+      "     which following administration of gadolinium reveals ring-enhancing lesions.\n",
+      "     These are suspicious for hemorrhagic metastases given the patient's history.\n",
+      "     Additional ring-enhancing lesions throughout the supra- and infratentorial\n",
+      "     compartments are visualized.  There is a moderate amount of peritumoral edema\n",
+      "     involving the right parietal lobe lesion in addition to a second right\n",
+      "     parietal lesion along the falx high in the vertex.  The other areas of\n",
+      "     metastases reveal a minimal amount of peritumoral edema.\n",
+      "     \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt1 = rad_data.loc[1,'text']\n",
+    "print(txt1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "     DATE: [**3264-8-16**] 1:53 PM\n",
+      "     CHEST (PORTABLE AP)                                             Clip # [**Clip Number (Radiology) 10701**]\n",
+      "     Reason: 68 yo M CHF, SOB                                            \n",
+      "     Admitting Diagnosis: CONGESTIVE HEART FAILURE\n",
+      "     ______________________________________________________________________________\n",
+      "     UNDERLYING MEDICAL CONDITION:\n",
+      "        68 year old man with sob, hx of chf, cad s/p CABG                             \n",
+      "       \n",
+      "     REASON FOR THIS EXAMINATION:\n",
+      "      68 yo M CHF, SOB                                                                \n",
+      "     ______________________________________________________________________________\n",
+      "                                     FINAL REPORT\n",
+      "     INDICATION:  Shortness of breath with history of CHF and CAD.\n",
+      "     \n",
+      "     Comparison [**3264-8-14**].\n",
+      "     \n",
+      "     FINDINGS:  Patient is status post CABG and multiple sternal wires appear\n",
+      "     fractured, not changed since the previous exam.  Cardiac and mediastinal\n",
+      "     contours are also unchanged.  Pulmonary vasculature is indistinct, and there\n",
+      "     remains vague increased density in the lingula.  No appreciable effusion.  No\n",
+      "     pneumothorax.\n",
+      "     \n",
+      "     IMPRESSION:\n",
+      "     1. Persistence of interval slight worsening of degree of patchy opacity within\n",
+      "     the lingula.  Continued follow up is recommended to exclude pneumonia.\n",
+      "     2. Persistent mild CHF.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt10 = rad_data.loc[10,'text']\n",
+    "print(txt10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'find_impression' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-512a8dae3cc3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfind_impression\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'find_impression' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "help(find_impression)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'IMPRESSION:\\n     1. Persistence of interval slight worsening of degree of patchy opacity within\\n     the lingula.  Continued follow up is recommended to exclude pneumonia.\\n     2. Persistent mild CHF.\\n\\n'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
-    "def find_impression():\n",
-    "    pass\n",
+    "def find_impression(txt, search_terms=[\"IMPRESSION\", \"INTERPRETATION\", \"CONCLUSION\"]):\n",
+    "    for term in search_terms:\n",
+    "        ind = txt.find(term)\n",
+    "        if ind != -1:\n",
+    "            return txt[ind:]\n",
+    "         \n",
+    "    return \"\"\n",
     "\n",
-    "find_impression()\n"
+    "find_impression(txt10)\n"
    ]
   },
   {
@@ -159,10 +414,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>subject_id</th>\n",
+       "      <th>hadm_id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>IMPRESSIONS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 10:43 AM\\n   ...</td>\n",
+       "      <td>IMPRESSION:  Stable appearance of right pariet...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-17**] 6:37 AM\\n    ...</td>\n",
+       "      <td>IMPRESSION:\\n     \\n     Cardiomegaly and mild...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>56</td>\n",
+       "      <td>28766.0</td>\n",
+       "      <td>\\n\\n\\n     DATE: [**2644-1-19**] 12:09 PM\\n   ...</td>\n",
+       "      <td>IMPRESSION:\\n     \\n     Marked improvement in...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   subject_id  hadm_id                                               text  \\\n",
+       "0          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...   \n",
+       "1          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:53 AM\\n   ...   \n",
+       "2          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 10:43 AM\\n   ...   \n",
+       "3          56  28766.0  \\n\\n\\n     DATE: [**2644-1-17**] 6:37 AM\\n    ...   \n",
+       "4          56  28766.0  \\n\\n\\n     DATE: [**2644-1-19**] 12:09 PM\\n   ...   \n",
+       "\n",
+       "                                         IMPRESSIONS  \n",
+       "0                                                     \n",
+       "1                                                     \n",
+       "2  IMPRESSION:  Stable appearance of right pariet...  \n",
+       "3  IMPRESSION:\\n     \\n     Cardiomegaly and mild...  \n",
+       "4  IMPRESSION:\\n     \\n     Marked improvement in...  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "rad_data[\"IMPRESSIONS\"] = rad_data[\"text\"].apply(find_impression)\n",
     "rad_data.head()"
    ]
   },
@@ -190,6 +534,96 @@
     "* Iterate over the rows of the data frame\n",
     "* Use TextBlob to get words"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def do_math(func):\n",
+    "    return[func(i) for i in np.arange(-np.pi,np.pi,0.5)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-1.0,\n",
+       " -0.8775825618903726,\n",
+       " -0.5403023058681397,\n",
+       " -0.07073720166770278,\n",
+       " 0.4161468365471425,\n",
+       " 0.8011436155469338,\n",
+       " 0.9899924966004455,\n",
+       " 0.9364566872907963,\n",
+       " 0.6536436208636118,\n",
+       " 0.21079579943077958,\n",
+       " -0.28366218546322636,\n",
+       " -0.7086697742912601,\n",
+       " -0.9601702866503661]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do_math(np.cos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-6.283185307179586,\n",
+       " -5.283185307179586,\n",
+       " -4.283185307179586,\n",
+       " -3.2831853071795862,\n",
+       " -2.2831853071795862,\n",
+       " -1.2831853071795862,\n",
+       " -0.28318530717958623,\n",
+       " 0.7168146928204138,\n",
+       " 1.7168146928204138,\n",
+       " 2.7168146928204138,\n",
+       " 3.7168146928204138,\n",
+       " 4.716814692820414,\n",
+       " 5.716814692820414]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do_math(lambda x:2*x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -208,7 +642,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
